--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <title>Assignment1</title>
 </head>
 <body>
-    <h1>
-        Git is fun!!!
+    <h1> id=" PageTitle" Git is fun!!!
     </h1>
     <P> Git hub  allows us to back up our code and work with others!!</P>
 </body>
