Adds scripts   tag  and update HTML

--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <title>Assignment1</title>
 </head>
 <body>
-    <h1>
-        Git is fun!!!
-    </h1>
+    <h1> id="Page Title" Git is fun!!!</h1>
     <P> Git hub  allows us to back up our code and work with others!!</P>
+    <script>
+      document.querySelector("#pagetitle").style.color="tomato";
+    </script>
 </body>
 </html>
